# cgma

./: CGMConfig.cmake.in  CMakeLists.txt  cgm.cmake.in
geom/: CMakeLists.txt
geom/OCC/: CMakeLists.txt
geom/facet/: CMakeLists.txt
geom/virtual/: CMakeLists.txt
init/: CMakeLists.txt
itaps/: CMakeLists.txt  iGeom-Defs.inc.in  iGeom_CGMA.cc
